--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <title>Ademoverflow Template</title>
+    <title>Event Radar Ai</title>
   </head>
   <body>
     <div id="app"></div>
